Create basic Trade and Journal models

--- a/trades/templates/home.html
+++ b/trades/templates/home.html
@@ -1,8 +1,11 @@
 {% extends "base.html" %}
 
-{% block title %}My Trading Journal | Homepage{% endblock %}
+{% block title %}Homepage{% endblock %}
 
 {% block content %}
-<h1>Hello</h1>
+
+<button type="button" class="btn btn-outline-primary">View a Journal</button>
+<button type="button" class="btn btn-outline-danger">Add a Journal</button>
+
 
 {% endblock content %}
