create JournalsListView, link url

--- a/trades/templates/home.html
+++ b/trades/templates/home.html
@@ -4,8 +4,8 @@
 
 {% block content %}
 
-<button type="button" class="btn btn-outline-primary">View a Journal</button>
-<button type="button" class="btn btn-outline-danger">Add a Journal</button>
+    <a href="{% url 'trades:journals' %}" role="button" class="btn btn-outline-primary">View a Journal</a>
+    <a href="" role="button" class="btn btn-outline-danger">Add a Journal</a>
 
 
 {% endblock content %}
