--- a/trades/templates/base.html
+++ b/trades/templates/base.html
@@ -8,12 +8,16 @@
     <title>{% block title %}My Trading Journal{% endblock %}</title>
 </head>
 <body>
-    <header>
-    </header>
     <main>
-        {% block content %}
-        {% endblock content %}
-    </main>
+        <div class="container-fluid">
+          <div class="d-flex align-items-center py-5">
+            <div class="col-12 col-md-6 col-lg-4 mx-auto">
+              {% block content %}
+              {% endblock content %}
+            </div>
+          </div>
+        </div>
+      </main>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-OERcA2EqjJCMA+/3y+gxIOqMEjwtxJY7qPCqsdltbNJuaOe923+mo//f6V8Qbsw3" crossorigin="anonymous"></script>
 </body>
 </html>
