create journal_create.html file

--- a/trades/templates/journal_list.html
+++ b/trades/templates/journal_list.html
@@ -17,6 +17,6 @@
     {% endif %}
 
     <p class="pt-2">
-        <a href="{% url 'trades:home' %}" role="button" class="btn btn-outline-primary">Cancel</a>
+        <a href="{% url 'trades:home' %}" role="button" class="btn btn-outline-danger">Cancel</a>
     </p>
 {% endblock content %}
