--- a/trades/templates/base.html
+++ b/trades/templates/base.html
@@ -9,7 +9,7 @@
 </head>
 <body>
     <main>
-        <div class="container-fluid">
+        <div class="container">
           <div class="d-flex align-items-center py-5">
             <div class="col-12 col-md-6 col-lg-4 mx-auto">
               {% block content %}
